--- a/subgraph.yaml
+++ b/subgraph.yaml
@@ -6,7 +6,7 @@ dataSources:
     name: GratitudeContract
     network: mumbai
     source:
-      address: "0x8aEda03348255708b6E74EBB5226bFE159A182Fb"
+      address: "0x4D2CD687a7e627CF25ECa3Ef2aD937Cf92acf239"
       abi: GratitudeContract
       startBlock: 25399700
     mapping:
@@ -24,7 +24,7 @@ dataSources:
         #   handler: handleApproval
         # - event: ApprovalForAll(indexed address,indexed address,bool)
         #   handler: handleApprovalForAll
-        - event: GratitudTokenAceptedEvent(uint256,uint8,uint256,uint256)
+        - event: GratitudTokenAceptedEvent(uint256,uint8,string,string)
           handler: handleGratitudTokenAceptedEvent
         - event: GratitudTokenChangeStatusEvent(uint256,uint8)
           handler: handleGratitudTokenChangeStatusEvent
@@ -34,7 +34,7 @@ dataSources:
           handler: handleGratitudeCampaignRejected
         - event: GratitudeCampaignVerified(uint256)
           handler: handleGratitudeCampaignVerified
-        - event: GratitudeTokenCreationEvent(indexed uint256,uint8,address,address,uint256,uint256,string)
+        - event: GratitudeTokenCreationEvent(indexed uint256,uint8,address,address,string,string,string)
           handler: handleGratitudeTokenCreationEvent
         # - event: OwnershipTransferred(indexed address,indexed address)
         #   handler: handleOwnershipTransferred
